cabal-version:       2.4

name:                advent2019
version:             0.1.0.0
author:              RSWilli
maintainer:          bartel.wilhelm@gmail.com
build-type:          Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules: Computer
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.12 && <4.13, containers, split
  hs-source-dirs:       lib

executable Day01P1
  import: shared-properties
  main-is:             part1.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      1/part1

executable Day13
  import: shared-properties
  main-is:             main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.12 && <4.13, containers, advent2019
  hs-source-dirs:      13