cabal-version:       2.4
name:                advent2019
version:             0.1.0.0
author:              RSWilli
maintainer:          bartel.wilhelm@gmail.com
build-type:          Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules: 
    Computer,
    InputParser

  build-depends:        
    base >=4.12 && <4.13,
    containers,
    megaparsec  ^>= 8.0

  hs-source-dirs:       lib

executable Day01
  import: shared-properties
  main-is:             day01.hs
  build-depends:       base >=4.12 && <4.13, advent2019
  hs-source-dirs:      days

executable Day02
  import: shared-properties
  main-is:             day02.hs
  build-depends:       base >=4.12 && <4.13, advent2019
  hs-source-dirs:      days

executable Day03
  import: shared-properties
  main-is:             day03.hs
  build-depends:       base >=4.12 && <4.13, containers, advent2019
  hs-source-dirs:      days

executable Day04
  import: shared-properties
  main-is:             day04.hs
  build-depends:       base >=4.12 && <4.13
  hs-source-dirs:      days

executable Day05
  import: shared-properties
  main-is:             day05.hs
  build-depends:       base >=4.12 && <4.13, advent2019
  hs-source-dirs:      days

executable Day06
  import: shared-properties
  main-is:             day06.hs
  build-depends:       base >=4.12 && <4.13, advent2019, containers
  hs-source-dirs:      days

executable Day07
  import: shared-properties
  main-is:             day07.hs
  build-depends:       base >=4.12 && <4.13, advent2019
  hs-source-dirs:      days

executable Day13
  import: shared-properties
  main-is:             main.hs
  build-depends:       base >=4.12 && <4.13, containers, advent2019
  hs-source-dirs:      13