cabal-version:       2.4
name:                advent2019
version:             0.1.0.0
author:              RSWilli
maintainer:          bartel.wilhelm@gmail.com
build-type:          Simple

common shared-properties
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules: 
    Computer,
    Util
    InputParser

  build-depends:        
    base,
    containers,
    megaparsec  ^>= 8.0

  hs-source-dirs:       lib

executable Day01
  import: shared-properties
  main-is:             day01.hs
  build-depends:       base, advent2019
  hs-source-dirs:      days

executable Day02
  import: shared-properties
  main-is:             day02.hs
  build-depends:       base, advent2019
  hs-source-dirs:      days

executable Day03
  import: shared-properties
  main-is:             day03.hs
  build-depends:       base, containers, advent2019
  hs-source-dirs:      days

executable Day04
  import: shared-properties
  main-is:             day04.hs
  build-depends:       base
  hs-source-dirs:      days

executable Day05
  import: shared-properties
  main-is:             day05.hs
  build-depends:       base, advent2019
  hs-source-dirs:      days

executable Day06
  import: shared-properties
  main-is:             day06.hs
  build-depends:       base, advent2019, containers
  hs-source-dirs:      days

executable Day07
  import: shared-properties
  main-is:             day07.hs
  build-depends:       base, advent2019
  hs-source-dirs:      days

executable Day08
  import: shared-properties
  main-is:             day08.hs
  build-depends:       base, advent2019, containers
  hs-source-dirs:      days

executable Day09
  import: shared-properties
  main-is:             day09.hs
  build-depends:       base, advent2019
  hs-source-dirs:      days

executable Day10
  import: shared-properties
  main-is:             day10.hs
  build-depends:       base, advent2019, containers
  hs-source-dirs:      days

executable Day11
  import: shared-properties
  main-is:             day11.hs
  build-depends:       base, advent2019, containers
  hs-source-dirs:      days

executable Day12
  import: shared-properties
  main-is:             day12.hs
  build-depends:       base, advent2019, containers
  hs-source-dirs:      days

executable Day13
  import: shared-properties
  main-is:             day13.hs
  build-depends:       base, containers, advent2019
  hs-source-dirs:      days

executable Day14
  import: shared-properties
  main-is:             day14.hs
  build-depends:       base, containers, advent2019
  hs-source-dirs:      days

executable Day15
  import: shared-properties
  main-is:             day15.hs
  build-depends:       base, containers, advent2019, dequeue ^>= 0.1.12
  hs-source-dirs:      days

executable Day17
  import: shared-properties
  main-is:             day17.hs
  build-depends:       base, containers, advent2019
  hs-source-dirs:      days